--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "edubridge",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.9",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.2"
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
+    "expo": "~52.0.46",
+    "expo-auth-session": "~6.0.3",
+    "expo-status-bar": "~2.0.1",
+    "firebase": "^11.7.3",
+    "react": "18.3.1",
+    "react-native": "0.76.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.3.12",
     "typescript": "~5.8.3"
   },
   "private": true
