--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
-    "expo": "~52.0.46",
-    "expo-auth-session": "~6.0.3",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.0",
+    "expo-auth-session": "~6.1.5",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^11.7.3",
-    "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react": "19.0.0",
+    "react-native": "0.79.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
   "private": true
